--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,11 +2,13 @@ FROM python:3.10-bullseye
 
 WORKDIR /app
 
+COPY . .
+
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y
 
-COPY . .
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8080
 
