Return to ideal Dockerfile and use smaller base image

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,14 +1,12 @@
-FROM python:3.10-bullseye
+FROM python:3.10-alpine
 
 WORKDIR /app
 
-COPY . .
-
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y
-
 RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
 
 EXPOSE 8080
 
