--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10-alpine
 
 WORKDIR /app
 
+RUN apk add --no-cache gcc musl-dev python3-dev libffi-dev g++ make
+
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
