--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.1.1
+exceptiongroup==1.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.3
 h11==0.14.0
@@ -16,6 +17,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+numpy==1.24.4
 orjson==3.10.3
 pydantic==2.7.1
 pydantic-settings==2.2.1
@@ -32,5 +34,6 @@ typer==0.12.3
 typing_extensions==4.11.0
 ujson==5.9.0
 uvicorn==0.29.0
+uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
