--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,9 +1,13 @@
-FROM python:3.10-alpine
+FROM python:3.10-bullseye
 
 WORKDIR /app
 
-RUN apk add --no-cache gcc musl-dev python3-dev libffi-dev g++ make
-
+RUN apt-get update && apt-get install -y \
+    gcc \
+    python3-dev \
+    libffi-dev \
+    g++ \
+    make 
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
