Update Dockerfile for two-stage build(scratch)

--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:latest
+FROM golang:latest AS firststage
 
 WORKDIR /app
 
@@ -7,8 +7,19 @@ RUN go mod download
 
 COPY . .
 
-RUN go build -o build/fizzbuzz
+RUN CGO_ENABLED=0 go build -ldflags '-extldflags "-static"' -o /myapp
+
+FROM scratch
+
+COPY --from=firststage /myapp /myapp
+COPY --from=firststage /app/templates/index.html /templates/
+
+COPY --from=firststage /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+
+COPY --from=firststage /etc/passwd /etc/passwd
+
+USER nobody
 
 EXPOSE 8080
 
-CMD ["./build/fizzbuzz", "serve"]
+CMD ["/myapp", "serve"]
